@startuml

title __RECORD's Class Diagram__\n

  namespace  {
    namespace ducational.record {
      class educational.record.HowManyRecord {
          + HowManyRecord()
          {static} + checkHowManyRecord()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ducational.record {
      class educational.record.MouseRecord {
          + MouseRecord()
          {static} + checkMouseRecord()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ducational.record {
      abstract class educational.record.Record {
          # name : String
          # record : int
          + Record()
          + getRecord()
          + setName()
          + setRecord()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ducational.record {
      class educational.record.SubtractRecord {
          + SubtractRecord()
          {static} + checkSubtractRecord()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ducational.record {
      class educational.record.SubtractWithCarriedRecord {
          + SubtractWithCarriedRecord()
          {static} + checkSubtractWithCarriedRecord()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ducational.record {
      class educational.record.SumsRecord {
          + SumsRecord()
          {static} + checkSumsRecord()
          + toString()
      }
    }
  }
  

  educational.record.HowManyRecord -up-|> educational.record.Record
  educational.record.MouseRecord -up-|> educational.record.Record
  educational.record.SubtractRecord -up-|> educational.record.Record
  educational.record.SubtractWithCarriedRecord -up-|> educational.record.Record
  educational.record.SumsRecord -up-|> educational.record.Record


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
